<resources>
    <string name="choice1">choose 1</string>
    <string name="app_name">Framgia E-learning System</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_update">Update</string>
    <string name="title_activity_login">Login</string>
    <string name="text_email_activity_login">Email</string>
    <string name="text_password_activity_login">Password</string>
    <string name="text_validation_activity_login">* Username or password is incorrect</string>
    <string name="text_create_account_activity_login">Create new account</string>
    <string name="title_activity_register">Register</string>
    <string name="text_email_activity_register">Email*</string>
    <string name="text_password_activity_register">Password*</string>
    <string name="text_retype_password_activity_register">Retype password*</string>
    <string name="text_full_name_activity_register">Full name*</string>
    <string name="edit_text_full_name_activity_register">Full name</string>
    <string name="text_avatar_activity_register">Avatar</string>
    <string name="text_required_information_activity_register">* Required information</string>
    <string name="title_activity_question">Lesson</string>
    <string name="action_ok">Ok</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_turn_on_wifi">Turn on Wi-Fi</string>
    <string name="action_turn_on_cellular_data">Turn on cellular data</string>
    <string name="title_activity_result">Result</string>
    <string name="content_main_question_number_text">20/500</string>
    <string name="content_main_word_text">Pronunciation</string>
    <string name="content_result_lesson_text">Basic Lesson</string>
    <string name="content_result_correct_number_text">67/300</string>
    <string name="result_word_name_text">Pronunciation</string>
    <string name="result_language_text">English</string>
    <string name="title_activity_update_profile">Update profile</string>
    <string name="text_old_password_activity_update_profile">Old password</string>
    <string name="text_new_password_activity_update_profile">New password</string>
    <string name="check_remember_activity_login">Remember me</string>
    <string name="connection_error_title_activity_login">Connection failed!</string>
    <string name="connection_error_message_activity_login">You are not connected to the Internet.
        Please check your network connection first.</string>
    <string name="empty_email_activity_login">Email field empty!</string>
    <string name="empty_password_activity_login">Password field empty!</string>
    <string name="empty_email_password_activity_login">Email and Password fields are empty!</string>
    <string name="invalid_username_password_message">Invalid email/password combination</string>
    <string name="title_activity_profile">Profile</string>
    <string name="content_profile_words_btn_text">Words</string>
    <string name="content_profile_lesson_btn_text">Lesson</string>
    <string name="title_activity_wordlist">Words List</string>
    <string name="text_learned">Learned</string>
    <string name="text_words">words</string>
    <string name="word_before">word before</string>
    <string name="contacting_servers">Contacting Servers</string>
    <string name="signing_out">Signing out ...</string>
    <string name="signing_in">Signing in ...</string>
    <string name="signing_up">Signing up ...</string>
    <string name="updating_profile">Updating profile ...</string>
    <string name="please_wait">Loading ...</string>
    <string name="sign_up_response">Sign up success</string>
    <string name="logout_response">Logout success</string>
    <string name="url_relationship">"https://manh-nt.herokuapp.com/relationships.json"</string>
    <string name="url_sign_up">https://manh-nt.herokuapp.com/users.json</string>
    <string name="url_logout">https://manh-nt.herokuapp.com/logout.json</string>
    <string name="url_login">https://manh-nt.herokuapp.com/login.json</string>
    <string name="url_update_profile">https://manh-nt.herokuapp.com/users/</string>
    <string name="toast_message_try_again">Something went wrong. Please try again.</string>
    <string name="toast_message_pick_image">You haven\'t picked any image.</string>
    <string name="toast_message_pick_image_error">Something went wrong.</string>
    <string name="toast_message_load_image_error">Avatar image Does Not exist or Network
        Error</string>
    <string name="toast_message_nothing_updated">Nothing updated!</string>
    <string name="button_remove_avatar">Remove</string>
    <string name="toast_message_update_successful">Profile updated!</string>
    <string name="toast_message_password_mismatch">Please make sure your confirmation
        password matches the new password.</string>
    <string-array name="Category_name">
        <item>ALL</item>
        <item>Basic</item>
        <item>Advance</item>
        <item>Expert</item>
    </string-array>
    <string-array name="progress_of_learning">
        <item>ALL</item>
        <item>Learned</item>
        <item>Not learn</item>
    </string-array>
    <string name="activity_main_alert_dialog_message">Want to log out?</string>
    <string name="activity_main_alert_dialog_title">Logout</string>
    <string name="activity_main_alert_dialog_yes">Yes</string>
    <string name="activity_main_alert_dialog_no">No</string>
    <string name="choice_text_1">choice 1</string>
    <string name="choice_text_2">choice 2</string>
    <string name="choice_text_3">choice 3</string>
    <string name="choice_text_4">choice 4</string>
    <string name="question_title">Basic Lesson</string>
    <string name="question_alert_message">Do you want to continue with this answer???</string>
    <string name="question_alert_positive">YES</string>
    <string name="question_alert_negative">NO</string>
    <string name="question_language">English</string>
    <string name="title_activity_categories">Categories</string>
    <string name="action_back">Back</string>
    <string name="categories_activity_set_title">Loading Categories</string>
    <string name="title_activity_learned">Words list</string>
    <string name="question_done">You are done with all the question,click done to see result</string>
    <string name="question_exit">Do you want to quit your lesson??</string>
    <string name="question_no_answer">Please answer at least one question</string>
    <string name="pdf">PDF</string>
    <string name="word_list">WORD LIST</string>
    <string name="back">BACK</string>
    <string name="pdf_type">application/pdf</string>
    <string name="pdf_open">Open With</string>
    <string name="language">Vietnamese</string>
</resources>
