<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.fels_99.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:src="@drawable/email"/>

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_toRightOf="@id/image_email"
            android:text="@string/text_email_activity_register"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_email"
            android:hint="@string/text_email_activity_login"
            android:inputType="textEmailAddress"/>

        <ImageView
            android:id="@+id/image_password"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:layout_below="@id/edit_text_email"
            android:src="@drawable/lock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_email"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_toRightOf="@id/image_password"
            android:text="@string/text_password_activity_register"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_password"
            android:hint="@string/text_password_activity_login"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/image_retype_password"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:layout_below="@id/edit_text_password"
            android:src="@drawable/lock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_password"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_toRightOf="@id/image_retype_password"
            android:text="@string/text_retype_password_activity_register"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_retype_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_retype_password"
            android:hint="@string/text_password_activity_login"
            android:inputType="textPassword"/>

        <ImageView
            android:id="@+id/image_full_name"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:layout_below="@id/edit_text_retype_password"
            android:src="@drawable/ic_description_black_36dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_retype_password"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_toRightOf="@id/image_full_name"
            android:text="@string/text_full_name_activity_register"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_full_name"
            android:hint="@string/edit_text_full_name_activity_register"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/text_required_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_full_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:text="@string/text_required_information_activity_register"
            android:textColor="@android:color/holo_red_dark"/>
    </RelativeLayout>
</ScrollView>
