<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_question" tools:context="com.framgia.elsytem.QuestionActivity">
    <TextView
        android:id="@+id/question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/content_main_question_number_text"
        android:textStyle="bold" />
    <View
        android:id="@+id/divider_1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/content_question_view_height"
        android:layout_below="@+id/question_number"
        android:layout_marginTop="@dimen/content_question_view_margin_top"
        android:background="@color/colorAccent" />
    <TextView
        android:id="@+id/word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_1"
        android:layout_marginLeft="@dimen/content_question_text_margin_left"
        android:layout_marginTop="@dimen/content_question_text_margin_top"
        android:text="@string/content_main_word_text"
        android:textSize="@dimen/content_question_text_size" />
    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/word"
        android:layout_marginRight="@dimen/content_question_image_marginRight"
        android:background="@drawable/ic_play" />
    <View
        android:id="@+id/divider_2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/content_question_view_height"
        android:layout_below="@+id/play"
        android:layout_marginTop="@dimen/content_question_view_margin_top"
        android:background="@color/colorAccent" />
    <Button
        android:id="@+id/choice_1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/choice_text_height"
        android:layout_below="@+id/divider_2"
        android:text="@string/choice_text_1"
        android:layout_marginTop="@dimen/choice_text_start_margin_Top"
        android:layout_marginLeft="@dimen/choice_text_margin_left"
        android:layout_marginRight="@dimen/choice_text_margin_right"
        android:padding="@dimen/choice_text_padding"
        android:background="@drawable/rec_shape"
        android:gravity="center"
        android:clickable="true"/>
    <Button
        android:id="@+id/choice_2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/choice_text_height"
        android:layout_below="@+id/choice_1"
        android:text="@string/choice_text_2"
        android:layout_marginLeft="@dimen/choice_text_margin_left"
        android:layout_marginRight="@dimen/choice_text_margin_right"
        android:layout_marginTop="@dimen/choice_text_margin_Top"
        android:padding="@dimen/choice_text_padding"
        android:background="@drawable/rec_shape"
        android:gravity="center"
        android:clickable="true"/>
    <Button
        android:id="@+id/choice_3"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/choice_text_height"
        android:layout_below="@+id/choice_2"
        android:text="@string/choice_text_3"
        android:layout_marginLeft="@dimen/choice_text_margin_left"
        android:layout_marginRight="@dimen/choice_text_margin_right"
        android:layout_marginTop="@dimen/choice_text_margin_Top"
        android:padding="@dimen/choice_text_padding"
        android:background="@drawable/rec_shape"
        android:gravity="center"
        android:clickable="true"/>
    <Button
        android:id="@+id/choice_4"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/choice_text_height"
        android:layout_below="@+id/choice_3"
        android:text="@string/choice_text_4"
        android:layout_marginLeft="@dimen/choice_text_margin_left"
        android:layout_marginRight="@dimen/choice_text_margin_right"
        android:layout_marginTop="@dimen/choice_text_margin_Top"
        android:padding="@dimen/choice_text_padding"
        android:background="@drawable/rec_shape"
        android:gravity="center"
        android:clickable="true"/>
</RelativeLayout>

