<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.framgia.fels_99.LoginActivity"
    tools:showIn="@layout/activity_login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_title_activity_login_text_size"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/image_email"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:layout_below="@id/text_login"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:src="@drawable/email"/>

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_login"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:layout_toRightOf="@id/image_email"
            android:text="@string/text_email_activity_login"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_email"
            android:hint="@string/text_email_activity_login"
            android:inputType="textEmailAddress"/>

        <ImageView
            android:id="@+id/image_password"
            android:layout_width="@dimen/icon_width_and_height"
            android:layout_height="@dimen/icon_width_and_height"
            android:layout_below="@id/edit_text_email"
            android:src="@drawable/lock"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_email"
            android:layout_marginLeft="@dimen/text_email_activity_login_margin_left"
            android:layout_toRightOf="@id/image_password"
            android:text="@string/text_password_activity_login"
            android:textSize="@dimen/text_email_activity_login_text_size"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/image_password"
            android:hint="@string/text_password_activity_login"
            android:inputType="textPassword"/>

        <CheckBox
            android:id="@+id/check_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_password"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edit_text_password"
            android:layout_toRightOf="@id/check_remember"
            android:text="@string/check_remember_activity_login"
            android:textSize="@dimen/text_email_activity_login_text_size"/>

        <TextView
            android:id="@+id/text_validation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_remember"
            android:layout_centerHorizontal="true"
            android:text="@string/text_validation_activity_login"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="invisible"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_validation"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:background="@color/colorAccent"
            android:text="@string/title_activity_login"
            android:textColor="@drawable/button_selector"/>

        <TextView
            android:id="@+id/text_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/text_title_activity_login_margin_top"
            android:text="@string/text_create_account_activity_login"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_create_account_activity_login_text_size"
            android:textStyle="bold"/>
    </RelativeLayout>
</ScrollView>